--- a/contributors/adobe/submitted/shapes/wrap-margin-001.html
+++ b/contributors/adobe/submitted/shapes/wrap-margin-001.html
@@ -3,7 +3,7 @@
     <head>
         <title>CSS Exclusions Test: wrap-margin property set</title>
         <link rel="author" title="Jacob Goldstein" href="mailto:jacobg@adobe.com">
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-margin-property">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-margin-property">
         <meta name="flags" content="ahem dom">
         <meta name="assert" content="Text should flow up to the margin defined around the exclusion">
         <script src="/resources/testharness.js"></script>
