--- a/contributors/adobe/submitted/shapes/shape-inside-002.html
+++ b/contributors/adobe/submitted/shapes/shape-inside-002.html
@@ -1,19 +1,20 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>CSS Shapes Test: shape-inside affects child layout</title>
+        <title>CSS Shapes Test: shape-inside affects child layout in RTL</title>
         <link rel="author" title="Alan Stearns" href="mailto:stearns@adobe.com">
         <link rel="reviewer" title="Daniel Glazman" href="mailto:daniel.glazman@disruptive-innovations.com" /> <!-- 2012-10-27 -->
-        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shapes">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shapes">
         <link rel="match" href="shape-ref.html"/>
         <meta name="flags" content="">
-        <meta name="assert" content="Inline-block children should lay out inside shape-inside boundary.">
+        <meta name="assert" content="RTL inline-block children should lay out inside shape-inside boundary.">
         <style>
           .container {
             width: 175px;
             line-height: 0;
             position: relative;
-            shape-inside: rectangle(0px, 0px, 125px, 125px);
+            direction: rtl;
+            shape-inside: rectangle(0px, 0px, 100px, 100px);
           }
           .inline-square {
             display: inline-block;
