--- a/contributors/ttwf_paris/MarcBourlon/submitted/vh_not_refreshing_on_chrome.html
+++ b/contributors/ttwf_paris/MarcBourlon/submitted/vh_not_refreshing_on_chrome.html
@@ -5,7 +5,7 @@
 	<title>CSS Values and Units Test: vh-based dimension doesn't change when the element's other dimension doesn't change.</title>
 	<link rel="author" title="Marc Bourlon" href="mailto:marc@bourlon.com">
 	<link rel="help" href="http://www.w3.org/TR/css3-values/#viewport-relative-lengths">
-	<link rel="match" ref="reference/vh_not_refreshing_on_chrome-ref.html">
+	<link rel="match" href="reference/vh_not_refreshing_on_chrome-ref.html">
 	<meta name="assert" content="vh-based dimension doesn't change when the element's other dimension doesn't change.">
 	<!-- This test exhibits a bug for Chrome 19.0.1084.56 / Mac OS X 10.6.8 -->
 
