removed underscores from class names. removed font-smoothing.

--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-001.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-001.html
@@ -18,17 +18,16 @@
 				font-family: Ahem;
 				font-size: 20px;
 				line-height: 1em;
-				font-smoothing: none;
 			}
 
 			#c1 {
 				color: green;
-				flow-into: flow_1;
+				flow-into: flow1;
 			}
 
 			#c2 {
 				color: blue;
-				flow-into: flow_2;
+				flow-into: flow2;
 			}
 
 			.flex {
@@ -38,11 +37,11 @@
 			}
 
 			.fromFlow1 {
-				flow-from: flow_1;
+				flow-from: flow1;
 			}
 
 			.fromFlow2 {
-				flow-from: flow_2;
+				flow-from: flow2;
 			}
 
 			#r1 {
