--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-003.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-003.html
@@ -17,7 +17,6 @@
 				font-family: Ahem;
 				line-height: 1em;
 				font-size: 20px;
-				font-smoothing: none;
 			}
 
 			#c1 {
@@ -38,13 +37,13 @@
 				flex-wrap: wrap;
 			}
 
-			.region_1 {
+			.region1 {
 				flow-from: f1;
 				width: 100px;
 				margin-right: 20px;
 			}
 
-			.region_2 {
+			.region2 {
 				flow-from: f2;
 				break-after: always;
 				width: 100px;
@@ -91,17 +90,17 @@
 			XXXXX
 		</div>
 		<div class="flex">
-			<div class="region_1">
+			<div class="region1">
 			</div>
-			<div class="region_2">
+			<div class="region2">
 			</div>
-			<div class="region_1">
+			<div class="region1">
 			</div>
-			<div class="region_2">
+			<div class="region2">
 			</div>
-			<div class="region_1">
+			<div class="region1">
 			</div>
-			<div class="region_2">
+			<div class="region2">
 				<p class="red">&nbsp;</p>
 			</div>
 		</div>
