--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-005.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-fixed-sized-flexbox-005.html
@@ -7,7 +7,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<meta name="assert" content="Test checks auto-height regions' layout when placed inside a flexbox with using
 		align-items and justify-content properties. The flowed content should be fragmented between the three regions
-		and flex container should distribute the remaining horizontal space evenly around the regions.">
+		and the flex container should distribute the remaining horizontal space evenly around the regions.">
 		<link rel="match" href="reference/autoheight-regions-in-fixed-sized-flexbox-005-ref.html">
 		<style>
 			.content {
