--- a/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-001.html
+++ b/contributors/adobe/incoming/css3-regions/flexbox/autoheight-regions-in-autoheight-flexbox-001.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CSS Regions: Auto-height regions in auto-height flexbox container</title>
+		<title>CSS Regions: Auto-height regions in auto-height flex container</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#rfcb-flow-fragment-height-resolution">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#layout-algorithm">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-wrap-property">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-direction-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-flow-property">
 		<meta name="flags" content="ahem">
 		<meta name="assert" content="Test that auto-height regions placed in a flex container with auto-height and
