--- a/contributors/adobe/submitted/regions/flexbox/column-flexbox-break.html
+++ b/contributors/adobe/submitted/regions/flexbox/column-flexbox-break.html
@@ -5,7 +5,8 @@
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-containers">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-direction-property">
 		<meta name="flags" content="ahem">
 		<meta name="assert" content="Test checks that a flex container with column flow is fragmented between regions.">
 		<link rel="match" href="reference/column-flexbox-break-ref.html">
