--- a/contributors/adobe/submitted/regions/flexbox/regions-flexbox-002.html
+++ b/contributors/adobe/submitted/regions/flexbox/regions-flexbox-002.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>CSS Regions: flowing auto-height flexbox elements in region</title>
 		<link rel="author" title="Catalin Badea" href="mailto:badea@adobe.com">
-		<link rel="help" href="http://www.w3.org/TR/css3-flexbox">
+		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property">
+		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property">
+		<link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-containers">
 		<meta name="flags" content="ahem">
 		<meta name="assert" content="Test that flex containers with auto height are flowed inside a namedflow.">
 		<link rel="match" href="reference/regions-flexbox-001-ref.html">
