Ignore HTML, FRAMESET, HEAD and BODY tokens tests are moved to 7.9 (additions to the in body insertion mode) section

--- a/html-templates/parsing-html-templates/additions-to-the-in-body-insertion-mode/ignore-body-token.html
+++ b/html-templates/parsing-html-templates/additions-to-the-in-body-insertion-mode/ignore-body-token.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML Templates: BODY element cannot be content of TEMPLATE element</title>
+<title>HTML Templates: In body insertion mode: parser should ignore BODY token</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
-<meta name="assert" content="BODY element cannot be content of TEMPLATE element">
-<link rel="help" href="http://www.w3.org/TR/2013/WD-html-templates-20130214/#template-element">
+<meta name="assert" content="http://www.w3.org/TR/2013/WD-html-templates-20130214/#in-body-addition">
+<link rel="help" href="http://www.w3.org/TR/2013/WD-html-templates-20130214/#in-body-addition">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src='../testcommon.js'></script>
+<script src='../../testcommon.js'></script>
 <link rel="stylesheet" href="/resources/testharness.css">
 </head>
 <body>
 <div id="log"></div>
 <script type="text/javascript">
+
+/*
+ * According to http://www.w3.org/TR/2013/WD-html-templates-20130214/#template-contents-insertion-mode
+ * when parser is in "template content" mode and meets <body> tag it should be switched to
+ * "in body" insertion mode.
+ * According to http://www.w3.org/TR/2013/WD-html-templates-20130214/#in-body-addition
+ * this token (BODY) should be ignored
+ */
 
 
 test(function() {
@@ -27,8 +35,8 @@ test(function() {
     assert_equals(template.content.childNodes.length, 0,
             'Template cannot contain BODY element');
 
-}, 'BODY element cannot be content of TEMPLATE element. '
-    + 'Test empty BODY element assigned to template innerHTML');
+}, 'Ignore BODY token. Test empty BODY element assigned to template innerHTML');
+
 
 test(function() {
     var doc = newHTMLDocument();
@@ -43,26 +51,25 @@ test(function() {
     assert_equals(template.content.firstChild.nodeName, 'DIV',
             'Template should contain children of ignored BODY element');
 
-}, 'BODY element cannot be content of TEMPLATE element.'
-    + 'Test not empty BODY element assigned to template innerHTML');
+}, 'Ignore BODY token. Test not empty BODY element assigned to template innerHTML');
 
 
 test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<body><div <div id="dv1">Some content</div></body><div id="dv2">Some valid content</div>';
+    template.innerHTML = '<body><div <div id="div1">Some content</div></body><div id="div2">Some valid content</div>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 2,
             'Wrong number of template content children');
-    assert_true(template.content.querySelector('#dv1') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain children of the ignored BODY element');
-    assert_true(template.content.querySelector('#dv2') != null,
+    assert_true(template.content.querySelector('#div2') != null,
             'Template should contain valid element');
 
-}, 'BODY element cannot be content of TEMPLATE element. '
+}, 'Ignore BODY token. '
         + 'Test BODY element and some valid element after BODY tag assigned to template innerHTML');
 
 
@@ -70,18 +77,18 @@ test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<div id="dv1">Some valid content</div><body><div id="dv2">Some content</div></body>';
+    template.innerHTML = '<div id="div1">Some valid content</div><body><div id="div2">Some content</div></body>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 2,
             'Template cannot contain BODY element');
-    assert_true(template.content.querySelector('#dv1') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain valid element');
-    assert_true(template.content.querySelector('#dv2') != null,
+    assert_true(template.content.querySelector('#div2') != null,
             'Template should contain children of the ignored BODY element');
 
-}, 'BODY element cannot be content of TEMPLATE element. '
+}, 'Ignore BODY token. '
         + 'Test BODY element and some valid element before BODY tag assigned to template innerHTML');
 
 
@@ -105,19 +112,20 @@ test(function() {
     assert_equals(nestedTemplate.content.firstChild.nodeName, 'SPAN',
             'Template cannot contain BODY element');
 
-}, 'BODY element cannot be content of TEMPLATE element. '
+}, 'Ignore BODY token. '
     + 'Test template with not empty BODY element inside assigned to another '
     + 'template\'s innerHTML');
 
 
-testInIFrame('../resources/template-contents-body.html', function(context){
+testInIFrame('../../resources/template-contents-body.html', function(context) {
     var doc = context.iframes[0].contentDocument;
 
     var template = doc.body.querySelector('template');
 
     assert_equals(template.content.childNodes.length, 0,
             'Template cannot contain BODY element');
-}, 'BODY element cannot be content of TEMPLATE element. '
+
+}, 'Ignore BODY token. '
     + 'Test loading a HTML file with BODY tag inside template');
 
 </script>
