--- a/html-templates/parsing-html-templates/additions-to-the-in-body-insertion-mode/ignore-html-token.html
+++ b/html-templates/parsing-html-templates/additions-to-the-in-body-insertion-mode/ignore-html-token.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML Templates: HTML element cannot be content of TEMPLATE element</title>
+<title>HTML Templates: In body insertion mode: parser should ignore HTML token</title>
 <meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
-<meta name="assert" content="HTML element cannot be content of TEMPLATE element">
-<link rel="help" href="http://www.w3.org/TR/2013/WD-html-templates-20130214/#template-element">
+<meta name="assert" content="If parser is in 'in body' insertion mode and meets HTML token it should be ignored">
+<link rel="help" href="http://www.w3.org/TR/2013/WD-html-templates-20130214/#in-body-addition">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src='../testcommon.js'></script>
+<script src='../../testcommon.js'></script>
 <link rel="stylesheet" href="/resources/testharness.css">
 </head>
 <body>
 <div id="log"></div>
 <script type="text/javascript">
 
+/*
+ * According to http://www.w3.org/TR/2013/WD-html-templates-20130214/#template-contents-insertion-mode
+ * when parser is in "template content" mode and meets <html> tag it should be switched to
+ * "in body" insertion mode.
+ * According to http://www.w3.org/html/wg/drafts/html/master/syntax.html#parsing-main-inbody
+ * this token (HTML) should be ignored
+ */
 
 test(function() {
     var doc = newHTMLDocument();
@@ -27,24 +34,23 @@ test(function() {
     assert_equals(template.content.childNodes.length, 0,
             'Template cannot contain HTML element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
-    + 'Test HTML element assigned to template innerHTML');
+}, 'Ignore HTML token. Test HTML element assigned to template innerHTML');
 
 
 test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<div id="dv">Some text</div><html><body></body></html>';
+    template.innerHTML = '<div id="div1">Some text</div><html><body></body></html>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 1,
             'Template cannot contain HTML element');
-    assert_true(template.content.querySelector('#dv') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain valid element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
+}, 'Ignore HTML token.'
     + 'Test HTML element and some valid element before it, assigned to template innerHTML');
 
 
@@ -52,16 +58,16 @@ test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<html><body></body></html><div id="dv">Some text</div>';
+    template.innerHTML = '<html><body></body></html><div id="div1">Some text</div>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 1,
             'Template cannot contain HTML element');
-    assert_true(template.content.querySelector('#dv') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain valid element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
+}, 'Ignore HTML token. '
     + 'Test HEAD element and some valid element after it, assigned to template innerHTML');
 
 
@@ -83,7 +89,7 @@ test(function() {
     assert_equals(nestedTemplate.content.childNodes.length, 0,
             'Template cannot contain HTML element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
+}, 'Ignore HTML token. '
     + 'Test HTML tag inside template tag assigned to another template\'s innerHTML');
 
 
@@ -91,57 +97,54 @@ test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<html><div id="dv">Some text</div></html>';
+    template.innerHTML = '<html><div id="div1">Some text</div></html>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 1,
             'Template cannot contain HTML element');
-    assert_true(template.content.querySelector('#dv') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain a valid element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
-    + 'Test some valid element inside HTML element');
+}, 'Ignore HTML token. Test some valid element inside HTML element');
 
 
 test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<html><body><div id="dv">Some text</div><body></html>';
+    template.innerHTML = '<html><body><div id="div1">Some text</div><body></html>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 1,
             'Template cannot contain HTML element');
-    assert_true(template.content.querySelector('#dv') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain valid element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
-    + 'Test valid element inside HTML and BODY elements');
+}, 'Ignore HTML token. Test valid element inside HTML and BODY elements');
 
 
 test(function() {
     var doc = newHTMLDocument();
     var template = doc.createElement('template');
 
-    template.innerHTML = '<html><span id="spn">Span</span><body><div id="dv">Some text</div><body></html>';
+    template.innerHTML = '<html><span id="span1">Span</span><body><div id="div1">Some text</div><body></html>';
 
     doc.body.appendChild(template);
 
     assert_equals(template.content.childNodes.length, 2,
             'Template cannot contain HTML element');
-    assert_true(template.content.querySelector('#dv') != null,
+    assert_true(template.content.querySelector('#div1') != null,
             'Template should contain valid DIV element');
 
-    assert_true(template.content.querySelector('#spn') != null,
+    assert_true(template.content.querySelector('#span1') != null,
             'Template should contain valid SPAN element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
-    + 'Test valid element inside and between HTML and BODY elements');
+}, 'Ignore HTML token. Test valid element inside and between HTML and BODY elements');
 
 
-testInIFrame('../resources/template-contents-html.html', function(context) {
+testInIFrame('../../resources/template-contents-html.html', function(context) {
     var doc = context.iframes[0].contentDocument;
 
     var template = doc.body.querySelector('template');
@@ -149,8 +152,7 @@ testInIFrame('../resources/template-contents-html.html', function(context) {
     assert_equals(template.content.childNodes.length, 0,
             'Template cannot contain HTML element');
 
-}, 'HTML element cannot be content of TEMPLATE element. '
-   + 'Test loading a HTML file with HTML tag inside template');
+}, 'Ignore HTML token. Test loading a HTML file with HTML tag inside template');
 
 </script>
 </body>
